add clear queue method
